# remind-cli

./: .env.example  .gitignore  BACKEND_ARCHITECTURE.md  CLAUDE.md  LICENSE.md  README.md  __init__.py  __main__.py  ai.py  codecov.yml  models.py  notifications.py  plugins.py  premium.py  pyproject.toml  remind.spec  scheduler.py  setup-cli.sh
.github/workflows/: release.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  __main__.py  ai.py  auth.py  backend.db  database.py  email.py  main.py  paddle.py  pyproject.toml  railway.json  setup.sh
backend/app/: __init__.py  ai.py  auth.py  config.py  database.py  email.py  models.py  paddle.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_auth.py  test_paddle.py
build_tools/: build.py  build_deb.sh  generate_homebrew_formula.py  homebrew_formula.rb  install.sh  macos_launchd.plist  systemd_service.service
remind/: ai.py  cli.py  config.py  db.py  models.py  notifications.py  platform_capabilities.py  platform_utils.py  plugins.py  premium.py  scheduler.py  utils.py
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py  test_dateparser.py  test_db.py  test_e2e.py  test_models.py  test_notifications.py  test_premium.py  test_scheduler.py  test_scheduler_daemon.py
