[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remind"
version = "0.1.0"
description = "A cross-platform CLI reminder and notification engine with AI-powered suggestions and smart nudges"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Remind Contributors" }
]
keywords = ["cli", "reminders", "notifications", "scheduler", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "typer[all]",
    "pydantic",
    "sqlalchemy",
    "notify-py",
    "dateparser",
    "openai",
    "pydantic-settings",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "ruff",
    "mypy",
]
build = [
    "pyinstaller>=6.0.0",
]
backend = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/remind"
Repository = "https://github.com/yourusername/remind.git"
Documentation = "https://github.com/yourusername/remind/blob/main/README.md"
"Bug Tracker" = "https://github.com/yourusername/remind/issues"

[project.scripts]
remind = "remind.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["remind"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
